--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -23,6 +23,7 @@
         android:background="#33000000" />
 
     <RelativeLayout
+        android:id="@+id/rl_practice"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
