家里的练习提交。

--- a/app/src/main/res/layout/practice_cus_view.xml
+++ b/app/src/main/res/layout/practice_cus_view.xml
@@ -7,6 +7,16 @@
 
     <com.hencoder.hencoderpracticedraw1.practice.CircleView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:visibility="visible"/>
+
+    <com.hencoder.hencoderpracticedraw1.practice.CircleLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+
+
+    </com.hencoder.hencoderpracticedraw1.practice.CircleLayout>
 
 </LinearLayout>
